<resources>
    <string name="app_name">WeatherApp</string>
    <string name="selectCity">Выберите город</string>
    <string name="editTextSelectCity">Введите название города</string>
    <string name="windSpeed">Скорость ветра</string>
    <string name="pressure">Давление</string>
    <string name="humidity">Влажность</string>
    <string name="temperature">20 °C</string>
    <string name="selectedCity">Отображает выбранный город</string>
    <string name="wind_speed_str">5 М/с ЮЗ</string>
    <string name="pressure_str">780 мм рт. ст.</string>
    <string name="humidity_str">91%</string>
    <string name="textSendSelectedCityButton">Готово</string>
    <string name="ImageViewWeatherIconContentDescription">weather_icon</string>
    <string name="weathericon">weatherIcon</string>
    <string name="selectedCityFieldText">Введите название города</string>
</resources>

