<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/selectedCityTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        style="@style/view_margins">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/selectedCityTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/selectedCityFieldText"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendSelectedCityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopEditSelectCitySpinnerSelectCity"
        android:backgroundTint="@android:color/secondary_text_dark"
        android:minWidth="64dp"
        android:text="@string/textSendSelectedCityButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbHumidity" />


    <CheckBox
        android:id="@+id/cbWindSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopEditSelectCitySpinnerSelectCity"
        android:buttonTint="@color/black"
        android:text="@string/windSpeed"
        style="@style/view_margins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectedCityTextInputLayout" />

    <CheckBox
        android:id="@+id/cbPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/black"
        android:text="@string/pressure"
        style="@style/view_margins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbWindSpeed" />


    <CheckBox
        android:id="@+id/cbHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/black"
        android:text="@string/humidity"
        style="@style/view_margins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbPressure" />


</androidx.constraintlayout.widget.ConstraintLayout>